# royale-ros

./: CMakeLists.txt  ChangeLog.md  README.md  argus_env.sh.in  nodelets.xml  package.xml
config/: parameters.json
doc/: argus_install.md  building.md  changing_exposures.md  dump_and_config.md  lscam.md  multiple_cameras.md
include/argus_ros/: camera_nodelet.h
launch/: camera.launch  rviz.launch
msg/: CameraOpStatus.msg
src/: camera_nodelet.cpp  config.cpp  dump.cpp  lscam.cpp
srv/: StartRecord.srv
