<?xml version="1.0"?>
<package format="2">
  <name>argus_ros</name>
  <version>0.2.0</version>
  <description>Gener8 Argus-based 3D ToF Camera ROS package</description>
  <maintainer email="orphaned-ros-package@bossanova.com">Orphaned ROS Package</maintainer>
  <maintainer email="sree.harsha@bossanova.com">Sree Harsha</maintainer>
  <license>Apache 2</license>
  <author email="tom@loveparkrobotics.com">Tom Panzarella</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bnr_testing_support</build_depend>
  <build_depend>roslint</build_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
